# comproenv

./: .dockerignore  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  launch.py
.github/workflows/: codeql-analysis.yml  docs.yml  main.yml  scripts.yml
application/: CMakeLists.txt  comproenv.cpp  generate_docs.cpp  main.cpp
cmake/: config.cmake
config/: config.yaml  linux_sample.yaml  windows_sample.yaml
docs/: Building.md  Commands.md  Examples.md  Quick_start.md  README.md
include/: const.h  environment.h  fs.h  shell.h  task.h  utils.h  yaml_parser.h
scripts/: parser.py  test_parser.py
src/: CMakeLists.txt  commands_environment.cpp  commands_global.cpp  commands_task.cpp  environment.cpp  generator.cpp  global.cpp  shell.cpp  task.cpp  utils.cpp  yaml_parser.cpp
src/commands/: environment.cpp  generator.cpp  global.cpp  task.cpp
