file(GLOB_RECURSE sources "*.cpp")

include("${PROJECT_SOURCE_DIR}/cmake/config.cmake")
add_executable(comproenv main.cpp)
target_link_libraries(comproenv comproenv-lib)
if (NOT MSVC)
    target_link_libraries(comproenv stdc++)
    if (APPLE)
        if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
            target_link_libraries(comproenv c++fs)
        else(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
            target_link_libraries(comproenv stdc++fs)
        endif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    else(APPLE)
        target_link_libraries(comproenv stdc++fs)
    endif(APPLE)
endif(NOT MSVC)