include("${PROJECT_SOURCE_DIR}/cmake/config.cmake")

link_libraries(comproenv-lib)
if (NOT MSVC)
    link_libraries(stdc++)
    if (APPLE)
        if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
            link_libraries(c++fs)
        else(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
            link_libraries(stdc++fs)
        endif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    else(APPLE)
        link_libraries(stdc++fs)
    endif(APPLE)
endif(NOT MSVC)

add_executable(comproenv comproenv.cpp)
add_executable(generate_docs generate_docs.cpp)
